Token test implementation